# noodle

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  flake.nix
assets/shaders/: cube_frag.glsl  cube_vert.glsl  light_vert.glsl  simpleFrag.glsl  simpleVert.glsl
include/glad/: glad.h
src/: camera.c  camera.h  main.c  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
